--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.93d9db76.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.0f1a406f.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.23a16704.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.3e9f5b70.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.7d3c8b6c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.56c3d630.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.8e57baf7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.1c1de94c.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.65afa331.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.790143a7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.7ccd3d7e.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.ts.70887e0e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.76d3bfd6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.cccdb9fc.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.861b6f0a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/i18n-svelte.b73e67d5.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.ts.3c21b9fc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_page.97295e13.js">
@@ -73,7 +73,7 @@
 			
 			<script>
 				{
-					__sveltekit_1lgiwt = {
+					__sveltekit_11we0yh = {
 						env: {"PUBLIC_RELAY_URL":"https://relay-worker.rutesantos4.workers.dev/"},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -82,10 +82,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.23a16704.js"),
-						import("./_app/immutable/entry/app.65afa331.js")
+						import("./_app/immutable/entry/start.3e9f5b70.js"),
+						import("./_app/immutable/entry/app.790143a7.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1lgiwt.element, {
+						kit.start(app, __sveltekit_11we0yh.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
