--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.93d9db76.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.0f1a406f.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.a62c59d1.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.ab49a6aa.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.7d3c8b6c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.df10603a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.28cefbc6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.1c1de94c.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.8c1caf15.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.4c221ae7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.7ccd3d7e.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.ts.70887e0e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.76d3bfd6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.e0a1ce3d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.4d11ea62.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/i18n-svelte.b73e67d5.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.ts.3c21b9fc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_page.97295e13.js">
@@ -73,7 +73,7 @@
 			
 			<script>
 				{
-					__sveltekit_10o5erg = {
+					__sveltekit_1tda5g6 = {
 						env: {"PUBLIC_RELAY_URL":"https://relay-worker.rutesantos4.workers.dev/"},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -82,10 +82,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.a62c59d1.js"),
-						import("./_app/immutable/entry/app.8c1caf15.js")
+						import("./_app/immutable/entry/start.ab49a6aa.js"),
+						import("./_app/immutable/entry/app.4c221ae7.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_10o5erg.element, {
+						kit.start(app, __sveltekit_1tda5g6.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
