--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			property="og:description"
 			content="Web frontend that converts HTML into a read template"
 		/>
-		<meta property="og:image" content="https://avatars.githubusercontent.com/u/105561142" />
+		<meta property="og:image" content="./icon-512.png" />
 
 		<!-- Twitter Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image" />
@@ -29,23 +29,23 @@
 			name="twitter:description"
 			content="Web frontend that converts HTML into a read template"
 		/>
-		<meta name="twitter:image" content="https://avatars.githubusercontent.com/u/105561142" />
+		<meta name="twitter:image" content="./icon-512.png" />
 
 		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.93d9db76.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.0f1a406f.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.7001853d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.b01fa533.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.7d3c8b6c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.fafb4587.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.ee4cd9b5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.1c1de94c.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.3c5a31b4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.d6257b0b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.7ccd3d7e.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.ts.70887e0e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.76d3bfd6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.fe100487.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.45e6e4ca.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/i18n-svelte.b73e67d5.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.ts.3c21b9fc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_page.97295e13.js">
@@ -73,7 +73,7 @@
 			
 			<script>
 				{
-					__sveltekit_14gqhsn = {
+					__sveltekit_1kufnzv = {
 						env: {"PUBLIC_RELAY_URL":"https://relay-worker.rutesantos4.workers.dev/"},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -82,10 +82,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.7001853d.js"),
-						import("./_app/immutable/entry/app.3c5a31b4.js")
+						import("./_app/immutable/entry/start.b01fa533.js"),
+						import("./_app/immutable/entry/app.d6257b0b.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_14gqhsn.element, {
+						kit.start(app, __sveltekit_1kufnzv.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
