--- a/src/app.html
+++ b/src/app.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html data-theme="dark" lang="en">
 	<head>
-		<title></title>
+		<title>html2read</title>
 		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 		<link rel="apple-touch-icon" href="%sveltekit.assets%/apple-touch-icon.png" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="description" content="Web frontend that converts HTML into a read template" />
-		<meta name="keywords" content="dart-pacotes, svelte, svelte-kit, template, brick, " />
+		<meta name="keywords" content="dart-pacotes, svelte, svelte-kit, template, brick, html2read" />
 		<meta name="author" content="rutesantos4" />
 
 		<!-- Facebook Meta Tags -->
