add custom icon

--- a/src/app.html
+++ b/src/app.html
@@ -18,7 +18,7 @@
 			property="og:description"
 			content="Web frontend that converts HTML into a read template"
 		/>
-		<meta property="og:image" content="https://avatars.githubusercontent.com/u/105561142" />
+		<meta property="og:image" content="%sveltekit.assets%/icon-512.png" />
 
 		<!-- Twitter Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image" />
@@ -29,7 +29,7 @@
 			name="twitter:description"
 			content="Web frontend that converts HTML into a read template"
 		/>
-		<meta name="twitter:image" content="https://avatars.githubusercontent.com/u/105561142" />
+		<meta name="twitter:image" content="%sveltekit.assets%/icon-512.png" />
 
 		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
