--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html data-theme="dark" lang="en">
 	<head>
-		<title></title>
+		<title>html2read</title>
 		<link rel="icon" href="./favicon.ico" />
 		<link rel="apple-touch-icon" href="./apple-touch-icon.png" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="description" content="Web frontend that converts HTML into a read template" />
-		<meta name="keywords" content="dart-pacotes, svelte, svelte-kit, template, brick, " />
+		<meta name="keywords" content="dart-pacotes, svelte, svelte-kit, template, brick, html2read" />
 		<meta name="author" content="rutesantos4" />
 
 		<!-- Facebook Meta Tags -->
@@ -36,16 +36,16 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.93d9db76.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.0f1a406f.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.b01fa533.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.5a1b9c69.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.7d3c8b6c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.ee4cd9b5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.076230e4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.1c1de94c.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.d6257b0b.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.3c4b20c6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.7ccd3d7e.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.ts.70887e0e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.76d3bfd6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.45e6e4ca.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.aec429fb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/i18n-svelte.b73e67d5.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.ts.3c21b9fc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_page.97295e13.js">
@@ -73,7 +73,7 @@
 			
 			<script>
 				{
-					__sveltekit_1kufnzv = {
+					__sveltekit_7ob59u = {
 						env: {"PUBLIC_RELAY_URL":"https://relay-worker.rutesantos4.workers.dev/"},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -82,10 +82,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.b01fa533.js"),
-						import("./_app/immutable/entry/app.d6257b0b.js")
+						import("./_app/immutable/entry/start.5a1b9c69.js"),
+						import("./_app/immutable/entry/app.3c4b20c6.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1kufnzv.element, {
+						kit.start(app, __sveltekit_7ob59u.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
