--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.93d9db76.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.0f1a406f.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.f55f60fb.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.115789e6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.7d3c8b6c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.ef286517.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.d4a7ab68.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.1c1de94c.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.5ff30d6a.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.0edd2656.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.7ccd3d7e.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.ts.70887e0e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.76d3bfd6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.2980a24e.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.8a07564d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/i18n-svelte.b73e67d5.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.ts.3c21b9fc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_page.97295e13.js">
@@ -73,7 +73,7 @@
 			
 			<script>
 				{
-					__sveltekit_1y8c0mw = {
+					__sveltekit_1iee5yv = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -82,10 +82,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.f55f60fb.js"),
-						import("./_app/immutable/entry/app.5ff30d6a.js")
+						import("./_app/immutable/entry/start.115789e6.js"),
+						import("./_app/immutable/entry/app.0edd2656.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1y8c0mw.element, {
+						kit.start(app, __sveltekit_1iee5yv.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
