--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
 		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout.93d9db76.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/_page.0f1a406f.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.d7c1e4e7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.7d3c8b6c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.cd9cf9fb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.1c1de94c.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.fb7fef10.js">
+		<link href="./_app/immutable/assets/_layout.f10494f1.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_page.297ed6a1.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.2e6c7b12.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.5eefcce0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.9f5b1269.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.c29e17e2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.4506c186.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.7ccd3d7e.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.2f23384f.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.ts.70887e0e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.76d3bfd6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.3e1bb401.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/i18n-svelte.b73e67d5.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.ts.96450d0e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page.19b01614.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.d2766137.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/i18n-svelte.fa9c486a.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.ts.35979068.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page.b652d512.js">
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
@@ -57,7 +57,7 @@
 
 <h1 id="title" class="text-4xl text-500 text-center svelte-sgmoxy">html2read!
 </h1>
-<section id="body" class="svelte-s8f4qf"><form action="."><div class="w-full text-center flex-row input-group mb-2"><div class="input-group-prepend"><span class="input-group-text">Read URL</span></div>
+<section id="body" class="svelte-46o774"><form action="."><div class="w-full text-center flex-row input-group mb-2"><div class="input-group-prepend"><span class="input-group-text">Read URL</span></div>
 	<input type="text" class="form-control svelte-3h3qam" id="Read URL" aria-describedby="basic-addon3" data-toggle="tooltip" data-placement="bottom" title="" required value="">
 </div></form>
 	
@@ -73,7 +73,7 @@
 			
 			<script>
 				{
-					__sveltekit_2zze3f = {
+					__sveltekit_15ae115 = {
 						env: {"PUBLIC_RELAY_URL":"https://relay-worker.rutesantos4.workers.dev/"},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -82,10 +82,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.d7c1e4e7.js"),
-						import("./_app/immutable/entry/app.fb7fef10.js")
+						import("./_app/immutable/entry/start.2e6c7b12.js"),
+						import("./_app/immutable/entry/app.4506c186.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_2zze3f.element, {
+						kit.start(app, __sveltekit_15ae115.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
