--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.f10494f1.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.297ed6a1.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.2e6c7b12.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.a0d49aa1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.5eefcce0.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.9f5b1269.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.cbb196e4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c29e17e2.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.4506c186.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.0b3292b5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.2f23384f.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.ts.70887e0e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.76d3bfd6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.d2766137.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.a3a39c85.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/i18n-svelte.fa9c486a.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.ts.35979068.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_page.b652d512.js">
@@ -73,7 +73,7 @@
 			
 			<script>
 				{
-					__sveltekit_15ae115 = {
+					__sveltekit_2sku4e = {
 						env: {"PUBLIC_RELAY_URL":"https://relay-worker.rutesantos4.workers.dev/"},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -82,10 +82,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.2e6c7b12.js"),
-						import("./_app/immutable/entry/app.4506c186.js")
+						import("./_app/immutable/entry/start.a0d49aa1.js"),
+						import("./_app/immutable/entry/app.0b3292b5.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_15ae115.element, {
+						kit.start(app, __sveltekit_2sku4e.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
